--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: IRANSansWeb;
+  src: url(./component/assets/fonts/IRANSansWeb\(FaNum\).woff2);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: IRANSansWeb;
+  src: url(./component/assets/fonts/IRANSansWeb\(FaNum\)_Light.eot);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: IRANSansWeb;
+  src: url(./component/assets/fonts/IRANSansWeb\(FaNum\)_Light.woff2);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: IRANSansWeb;
+  src: url(./component/assets/fonts/IRANSansWeb\(FaNum\)_Medium.woff2);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: IRANSansWeb;
 }
