--- a/src/component/Home/Main.css
+++ b/src/component/Home/Main.css
@@ -1,4 +1,5 @@
 .bit_main_container {
+  /* width: 100vw; */
   margin: 120px auto 0 auto;
   padding: 0 15px;
 }
@@ -15,14 +16,17 @@
 
 .row_section {
   display: flex;
+  padding: 0 10px;
   justify-content: center;
 }
 
 .input_main {
+  width: 215.71px;
+  height: 44px;
   border: 1px solid #aaa;
   border-radius: 4px;
   background-color: #fff;
-  padding: 5% 2.1rem;
+  padding: 9px 12px;
   margin-top: -4px;
   margin-right: 2px;
   text-align: center;
@@ -99,6 +103,31 @@
 .buy_content h2 {
   font-size: 14px;
   font-weight: 300;
+  color: hsla(0, 0%, 100%, 0.1);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#222),
+    to(#222),
+    color-stop(0.5, #fff)
+  );
+  background-size: 125px 100%;
+  background-repeat: no-repeat;
+  background-color: #222;
+  background-clip: text;
+  animation-iteration-count: infinite;
+  animation-name: identifier;
+  animation-duration: 4s;
+}
+@keyframes identifier {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: 100% 0;
+  }
 }
 
 .contact a {
@@ -108,4 +137,37 @@
   font-weight: 500;
   color: #2485fd;
   margin-top: -2px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .bit_main_container {
+    margin: 120px 0 0 0;
+  }
+  .input_main {
+    width: 180.77px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .bit_main_container {
+    margin: 55px auto 0 auto;
+  }
+  .logo img {
+    width: 200px;
+    height: 73.69px;
+  }
+  .input_main {
+    width: 142.64px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .bit_main_container {
+    margin: 55px auto 0 auto;
+  }
+  .logo img {
+    width: 200px;
+    height: 73.69px;
+  }
+  .input_main {
+    padding: 9px 12px;
+  }
 }
