--- a/src/component/pages/About/About.css
+++ b/src/component/pages/About/About.css
@@ -9,3 +9,122 @@
   font-weight: 100;
   padding: 0 6px;
 }
+.comment_container {
+  width: 100vw;
+  height: 624px;
+  color: #000000;
+  margin: 16px 0px 0px 0px;
+  /* padding: 0px 15px; */
+  overflow: hidden;
+}
+.page_content {
+  width: 97vw;
+  height: 99%;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+  margin: 16px 0px 10px 0px;
+  padding: 15px;
+}
+.row_col_page_about {
+  width: 95vw;
+  height: 100vh;
+  padding: 0px 15px;
+  font-size: 13px;
+  display: flex;
+}
+.row1_col1_page_about {
+  width: 48vw;
+  height: 100vh;
+  padding: 0px 7px;
+  direction: rtl;
+}
+.row1_col1_page_about ul {
+  list-style: none;
+}
+li {
+  font-size: 13px;
+  margin: 10px 0px 0px 0px;
+}
+.li-title-head {
+  color: #2585fc;
+  margin: 10px 0px 0px 0px;
+  font-size: 15px;
+}
+.b6473b {
+  text-decoration: none;
+}
+.row1_col2_page_about {
+  width: 45vw;
+  height: 100%;
+  direction: rtl;
+}
+.row1_col2_page_about p {
+  padding: 0px 0px 10px 0px;
+  font-size: 13px;
+}
+.row1_col2_page_about img {
+  width: 98%;
+  height: 405px;
+  border-radius: 8px;
+  margin: 0px 0px 90px 0px;
+}
+.row1_col2_page_about a {
+  margin: 50px 0px 4px 0px;
+  font-size: 13px;
+}
+@media only screen and (max-width: 1200px) {
+  .row1_col2_page_about img {
+    width: 97%;
+    height: 405px;
+    border-radius: 8px;
+    margin: 0px 8px 70px 0px;
+  }
+  .page_content {
+    width: 96.5vw;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .row1_col2_page_about img {
+    width: 97%;
+    height: 400px;
+    border-radius: 8px;
+    margin: 0px 5px 70px 0px;
+  }
+  .page_content {
+    width: 96vw;
+  }
+}
+@media screen and (max-width: 575px) {
+  .comment_container {
+    height: 1180px;
+    width: 100%;
+  }
+  .page_content {
+    display: flex;
+    flex-direction: column;
+    width: 97vw;
+  }
+  .row_col_page_about {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  .row1_col1_page_about {
+    order: 1;
+    width: 92vw;
+  }
+  .row1_col2_page_about {
+    order: 0;
+    width: 88vw;
+  }
+  .row1_col2_page_about img {
+    width: 97%;
+    height: 400px;
+    border-radius: 6px;
+    margin: 0px 5px 70px 0px;
+  }
+  .row1_col2_page_about a {
+    /* order: 0 3; */
+  }
+}
