--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: IRANSansWeb;
+  font-family: IRANSansWeb, sans-serif;
 }
 
 .support_icon_container {
